compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-27.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-3.5 mod -10.0   % -3.5"

---
"_"@(FileId(1), 6..7) -> Real(-3.5)


